[package]
name = "mod"
version = "0.1.0"
description = "DLL to hook the LU clients' zone status and translate that to a Discord RPC."
authors = ["elenawinters <elenamaywinters@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["libloaderapi", "memoryapi", "consoleapi"] }
lazy_static = "1.4.0"
simplelog = "0.9.0"
rustcord = { git = "https://github.com/elenawinters/rustcord" }
lu_packets = { git = "https://github.com/lcdr/lu_packets" }
roxmltree = "0.14.0"
log = "0.4.11"


[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
